Working on locations table
