# lib/api/locations.ts
@@ -1,17 +1,42 @@
 import { Request, Response } from "express";
-import { createLocation } from "../database/location";
+import { createLocation, findLocation, findLocations } from "../database/location";
 import { getName } from "../validation/semantic-validation";
-import { getObject } from "../validation/type-validation";
-import { Created, handleException } from "../web/response";
+import { getInt, getObject } from "../validation/type-validation";
+import { Created, Forbidden, handleException, Ok } from "../web/response";
 import { validateToken } from "./auth";
+
+export async function getLocations(req: Request, res: Response): Promise<void> {
+    try {
+        const user = await validateToken(req);
+        //ordering
+        //modify query in table class to use asc/desc and no page
+        console.log(req.query);
+        const locations = await findLocations(user.id);
+        new Ok({ locations: locations }).send(res);
+    } catch(e: any) {
+        handleException(e, res);
+    }
+}
 
 export async function postLocation(req: Request, res: Response): Promise<void> {
     try {
         const user = await validateToken(req);
         const body = getObject(req.body);
         const name = getName(body.name);
-        const tempUser = await createLocation(user.id, name);
-        new Created({username: tempUser.id}).send(res);
+        const location = await createLocation(user.id, name);
+        new Created({ id: location.id }).send(res);
+    } catch(e: any) {
+        handleException(e, res);
+    }
+}
+
+export async function getLocation(req: Request, res: Response): Promise<void> {
+    try {
+        const user = await validateToken(req);
+        const id = getInt(req.params.locationId);
+        const location = await findLocation(id);
+        if(location.userId != user.id) throw new Forbidden();
+        new Ok({ name: location.name });
     } catch(e: any) {
         handleException(e, res);
     }
